Fixed sticky footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,21 @@ a:hover {
 ul {
   margin-top: 10px;
 }
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 200px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 200px;
+  line-height: 50px;
+}
