--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
     font-weight: 400;
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     margin: 0;
 }
@@ -68,7 +68,7 @@ main {
 }
 
 #landing-image {
-    background: url('../img/main.jpg');
+    background: url('https://farm2.staticflickr.com/1886/44454862101_acabf5337d_k.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: none;
@@ -101,7 +101,7 @@ footer {
     text-align: center;
     padding: 2rem 1rem;
     margin: auto;
-    color: #333; 
+    color: #333;
 }
 
 footer h3 {
@@ -123,16 +123,16 @@ footer .fa-stack:hover {
       display: flex;
       height: 100%;
     }
-  
+
     #landing-text {
       height: 100vh;
     }
-  
+
     #landing-image {
       height: 100vh;
     }
   }
-  
+
   /* Screen Sizes 700px and Up */
   @media (min-width: 700px) {
     .btn {
